syntax="proto3";

package proto;

message User {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    string message = 1;
}